config/manifests/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bouncer-system
  labels:
    app.kubernetes.io/name: bouncer
